Fixed players' container: now it doesn't show up until the game starts; Also fixed scrolling on mobile devices: now it's gone.

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -26,7 +26,8 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
+    overflow: hidden;
 }
 
 p {
@@ -335,7 +336,7 @@ button:active {
     position: fixed;
     bottom: 0;
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
